--- a/CaseTherapist/Web.config
+++ b/CaseTherapist/Web.config
@@ -64,6 +64,12 @@
       <setting name="caseAllContact" serializeAs="String">
         <value>'Incoming Call','Outgoing call','Chat','ACD - Live'</value>
       </setting>
+      <setting name="password" serializeAs="String">
+        <value>hosema</value>
+      </setting>
+      <setting name="adminUsers" serializeAs="String">
+        <value>JosephHo,LoriHa,RobertCr</value>
+      </setting>
     </hapiservice.Properties.Settings>
   </applicationSettings>
 <system.webServer>
